full-moon/tests/cases/fail/parser/function-6/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/function-6
---
error[ast]: unexpected token ``.  (expected `end` to close block)
  ┌─ source.lua:1:13
  │
1 │ function x()
  │             ^


